# smart_uuid

./: Cargo.toml  README.md
.claude/: settings.local.json
smart_uuid/: Cargo.toml
smart_uuid/examples/: demo.rs  macro_features.rs
smart_uuid/src/: error.rs  lib.rs  traits.rs  typed_uuid.rs  user_friendly_uuid.rs
smart_uuid/tests/: uuid_tests.rs
smart_uuid_derive/: Cargo.toml
smart_uuid_derive/src/: lib.rs
smart_uuid_derive/tests/: integration.rs
smart_uuid_derive/tests/cases/fail/: empty_enum.rs  empty_enum.stderr  invalid_attribute.rs  invalid_attribute.stderr  struct_not_enum.rs  struct_not_enum.stderr  struct_variant.rs  struct_variant.stderr  too_many_variants.rs  too_many_variants.stderr  tuple_variant.rs  tuple_variant.stderr
smart_uuid_derive/tests/cases/pass/: basic_enum.rs  custom_prefix.rs  many_variants.rs  single_variant.rs  snake_case_acronyms.rs
