[package]
name = "smart_uuid_derive"
version = "0.1.0"
edition = "2021"
description = "Derive macro for smart_uuid UuidType trait"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1.0"
smart_uuid = { path = "../smart_uuid" }
